<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="kr.groo.android.permission.ui.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <Button
            android:id="@+id/btn_phone_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_phone_state"
            android:onClick="@{() -> activity.onClickPhoneState()}"
            app:layout_constraintBottom_toTopOf="@id/btn_call_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_call_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_call_phone"
            android:onClick="@{() -> activity.onClickCallPhone()}"
            app:layout_constraintBottom_toTopOf="@id/btn_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_phone_state" />

        <Button
            android:id="@+id/btn_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_location"
            android:onClick="@{() -> activity.onClickLocation()}"
            app:layout_constraintBottom_toTopOf="@id/btn_storage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_call_phone" />

        <Button
            android:id="@+id/btn_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_storage"
            android:onClick="@{() -> activity.onClickStorage()}"
            app:layout_constraintBottom_toTopOf="@id/btn_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_location" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_camera"
            android:onClick="@{() -> activity.onClickCamera()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_storage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>